# FamilyTree

./: .env  .env.example  README.md  docker-compose.yaml  init.cypher
be/: Dockerfile  debug_db.py  debug_edges.py  main.py  migrate_ids.py  pyproject.toml
be/app/: database.py  db.py  main.py  models.py  storage.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
ui/src/: App.vue  style.css
ui/src/components/: EditPersonModal.vue  PersonDetailsPanel.vue
ui/src/router/: index.ts
ui/src/stores/: familyStore.ts
ui/src/views/: AdminDashboard.vue  AdminLogin.vue  TreeVisualization.vue
